# Simplicity

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  limine.cfg  make-image.sh  start-qemu.sh
scripts/: make-image.sh  start-qemu.sh
src/: Constants.hpp  GDT.cpp  GDT.hpp  Init.cpp  Kernel.cpp  Kernel.hpp  kernel.c  kernel.cpp  stivale2.h
src/GDT/: GDT.S  GDT.hpp
src/IDT/: IDT.S  IDT.cpp  IDT.hpp
